feat (index.html): Subida prueba actividad 2.1.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     <h1>Hola mundo</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae repellat blanditiis voluptatibus alias facere? Dignissimos voluptate ipsum eligendi facilis quas, natus omnis corporis repellendus, suscipit voluptatibus in. Fugiat, excepturi optio!</p>
+
+    <script>
+        document.write("Código JS dentro de HTML");
+    </script>
+
+    <p onclick="alert('Un mensaje lanzado por JavaScript')">
+        Esto es un párrafo con un evento asociado.
+    </p>
 </body>
 </html>
