feat(js): se ha añadido un icono con JavaScript, actividad 2.1.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prueba JavaScript</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+
 </head>
 <body>
+    <script>
+        document.write('<i class="fa-regular fa-file"></i>');
+    </script>
     <h1>Hola mundo</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae repellat blanditiis voluptatibus alias facere? Dignissimos voluptate ipsum eligendi facilis quas, natus omnis corporis repellendus, suscipit voluptatibus in. Fugiat, excepturi optio!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+        Repudiandae repellat blanditiis voluptatibus alias facere? 
+        Dignissimos voluptate ipsum eligendi facilis quas, natus omnis 
+        corporis repellendus, suscipit voluptatibus in. Fugiat, excepturi 
+        optio!</p>
 
     <script>
         document.write("Código JS dentro de HTML");
